# Version History

## unreleased

## 0.8.3

* MCCS-667 - modify gitlab ci pipeline
* MCCS-654 - modify url for JSON
* MCCS-539 - initial msgq to subarray
* MCCS-425 - Write documentation for new features
* MCCS-576 - Add typehints to code in non-device modules
* MCCS-662 - Move event handling to MccsDeviceProxy and DevicePool
* MCCS-484 - Support for hardware testing
* MCCS-521 - Support mocking of all devices
* MCCS-594 - Remove ERROR in test log
* MCCS-536 - Convert Controller Allocate command to use message queue
* MCCS-590 - PEP257 docstring linting
* MCCS-597 - Add static type checking to toolchain
* MCCS-589 - Add cov-report term to setup.cfg
* MCCS-550 - make tests and make lint
* MCCS-565 - Remove tabs from charts/ska-low-mccs/data/configuration.json
* MCCS-588 - Update charts to fix local deployment failure
* MCCS-583 - Add cyclomatic complexity to linting
* MCCS-160 - Add zDisplacement. Geo posn --> Station
* MCCS-423 - Add 40G interface programming: destination IP, status
* MCCS-530 - Add MCCS Controller "Off" command to use message queue

## 0.8.2

* MCCS-581 - Fix assignedResources in Restart command
* MCCS-564 - Fix assignedResources json string
* MCCS-566 - Pin ska_tango_base and pause intersphinx cross-link checks
             (Temporary workaround pending update to ska_tango_base
             version 0.11.0)

## 0.8.1

* MCCS-561 - Fix location of assignedResources attribute init

## 0.8.0

* MCCS-442 - Restart command implementation
* MCCS-459 - Integration of new json strings
* MCCS-554 - Update container images
* MCCS-452 - Import/adapt AAVS pointing→delay routines
* MCCS-271 - add ApplyPointing to StationBeam (and Station)
* MCCS-547 - RTD bugfix again
* MCCS-549 - yaml bugfix
* MCCS-510 - Message queue integration for "On" command
* MCCS-420 - Imported and edited Tile object for tpm 1.2 and 1.6
* MCCS-422 - Add DAQ packet generation functionalities into Tango device
* MCCS-511 - message queue with unit tests