@@ -10,10 +10,10 @@ global:
   minikube: true
   tango_host: databaseds-tango-base-test:10000
   sub-system:
-    tango-base:
+    ska-tango-base:
       enabled: false
 
-tango-base:
+ska-tango-base:
   vnc:
     enabled: false
   tangorest:
